--- a/frontend/gui/package.json
+++ b/frontend/gui/package.json
@@ -33,6 +33,8 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "slate": "^0.59.0",
+    "slate-react": "^0.59.0",
     "three": "^0.120.1"
   },
   "scripts": {
