--- a/frontend/gui/package.json
+++ b/frontend/gui/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@ant-design/dark-theme": "^2.0.2",
     "@ant-design/icons": "^4.2.1",
+    "@ckeditor/ckeditor5-build-classic": "^25.0.0",
+    "@ckeditor/ckeditor5-react": "^3.0.1",
     "@progress/kendo-licensing": "^1.1.3",
     "@progress/kendo-react-upload": "^4.3.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -22,9 +24,11 @@
     "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-full-screen": "^0.3.1",
+    "react-html-parser": "^2.0.2",
     "react-postprocessing": "^1.3.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
+    "react-rte": "^0.16.3",
     "react-scripts": "3.4.1",
     "react-select": "^3.2.0",
     "react-three-fiber": "^4.2.21",
@@ -57,5 +61,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^5.0.2"
   }
 }
